--- a/customer/style.css
+++ b/customer/style.css
@@ -447,6 +447,12 @@ main {
     color: white;
 }
 
+.card-bayar {
+    width: 100%;
+    height: 10%;
+    display: block;
+}
+
 /* Mengatasi masalah radio button alignment yang sering terjadi */
 .form-check-input {
     /* Memastikan ukuran konsisten */
